# lenna-core

./: .gitignore  Cargo.toml  README.md  build.rs  cbindgen.toml  crates.js  deny.toml  help.html  index.md  justfile  lenna.yml  pyproject.toml  search-index.js  settings.html  setup.py  source-files.js  src-files.js
.github/workflows/: bench.yml  ci.yml  coverage.yml  deny.yml
benches/: lenna_benchmark.rs
examples/: pipeline.rs
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.PartialEq.js
implementors/core/default/: trait.Default.js
implementors/core/fmt/: trait.Debug.js
implementors/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
implementors/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
implementors/lenna_core/core/processor/: trait.ImageProcessor.js  trait.Processor.js
implementors/serde/de/: trait.Deserialize.js
implementors/serde/ser/: trait.Serialize.js
implementors/std/panic/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
lenna_core/: __init__.py  all.html  index.html  macro.export_c_plugin!.html  macro.export_c_plugin.html  macro.export_plugin!.html  macro.export_plugin.html  macro.export_python_plugin!.html  macro.export_python_plugin.html  sidebar-items.js  static.CORE_VERSION.html  static.RUSTC_VERSION.html
lenna_core/core/: index.html  sidebar-items.js  struct.LennaImage.html
lenna_core/core/config/: index.html  sidebar-items.js  struct.Config.html  struct.ProcessorConfig.html
lenna_core/core/pipeline/: index.html  sidebar-items.js  struct.Pipeline.html
lenna_core/core/pool/: index.html  sidebar-items.js  struct.Pool.html
lenna_core/core/processor/: index.html  sidebar-items.js  trait.ExifProcessor.html  trait.ImageProcessor.html  trait.Processor.html
lenna_core/core/resize/: index.html  sidebar-items.js  struct.Resize.html
lenna_core/io/: index.html  sidebar-items.js
lenna_core/io/read/: fn.read_from_data.html  fn.read_from_file.html  index.html  sidebar-items.js
lenna_core/io/write/: fn.write_to_data.html  fn.write_to_file.html  index.html  sidebar-items.js
lenna_core/plugins/: index.html  sidebar-items.js  struct.PluginDeclaration.html  trait.PluginRegistrar.html
lenna_core/plugins/c/: fn.lenna_plugin_image.html  fn.lenna_plugin_image_destroy.html  fn.lenna_plugin_image_length.html  index.html  sidebar-items.js  struct.LennaImageBuffer.html
lenna_core/plugins/cpp/: index.html
lenna_core/plugins/python/: fn.PyInit_Resize.html  fn.PyInit_lenna_core.html  fn.process.html  fn.py_process.html  index.html  sidebar-items.js
lenna_core_py/: __init__.py
search.desc/lenna_core/: lenna_core-desc-0-.js
src/: lib.rs
src/core/: config.rs  mod.rs  pipeline.rs  pool.rs  processor.rs  resize.rs  resize.vue
src/io/: mod.rs  read.rs  write.rs
src/lenna_core/: lib.rs.html
src/lenna_core/core/: config.rs.html  mod.rs.html  pipeline.rs.html  pool.rs.html  processor.rs.html  resize.rs.html
src/lenna_core/io/: mod.rs.html  read.rs.html  write.rs.html
src/lenna_core/plugins/: c.rs.html  cpp.rs.html  mod.rs.html
src/lenna_core/plugins/python/: mod.rs.html
src/plugins/: c.rs  mod.rs  wasm.rs
src/plugins/python/: mod.rs  test.py
trait.impl/core/clone/: trait.Clone.js
trait.impl/core/cmp/: trait.PartialEq.js
trait.impl/core/default/: trait.Default.js
trait.impl/core/fmt/: trait.Debug.js
trait.impl/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
trait.impl/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
trait.impl/lenna_core/core/processor/: trait.Processor.js
trait.impl/serde/de/: trait.Deserialize.js
trait.impl/serde/ser/: trait.Serialize.js
