[package]
name = "lenna_core"
version = "0.1.9"
authors = ["Christian <chriamue@gmail.com>"]
edition = "2021"
description = "Lenna is a library for image processing algorithms and apps."
license = "MIT"
readme = "README.md"
repository = "https://github.com/lenna-project/lenna-core"
homepage = "https://lenna.app/"
documentation = "https://docs.rs/lenna_core"
keywords = ["library", "image-processing"]
categories = ["multimedia::images", "wasm", "graphics"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
resize-plugin = []
python = ["ndarray", "nshare", "numpy", "pyo3", "pythonize"]
cpp = []

[dependencies]
base64 = "0.13"
dyn-clone = "1.0.4"
kamadak-exif = "0.5.4"
image = { version = "0.23.14", default-features = false, features = ["png", "jpeg"] }
img-parts = "0.2.3"
paste = "1.0"
pyo3 = { version = "0.14", features = ["extension-module"], optional = true }
ndarray = { version = "0.15.3", optional = true }
nshare = { version = "0.7.0", features = ["image", "ndarray"], optional = true }
numpy = { version = "0.14.1", optional = true }
pythonize = { version = "0.14.0", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8.17"
console_error_panic_hook = "0.1.6"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
libc = "0.2"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[build-dependencies]
rustc_version = "0.4"
cbindgen = "0.19"

[package.metadata.maturin]
classifiers = ["Programming Language :: Python"]
requires-dist = ["numpy"]

#exclude = [".github/*"]
