[package]
name = "lenna_core"
version = "0.3.2"
authors = ["Christian <chriamue@gmail.com>"]
edition = "2021"
description = "Lenna is a library for image processing algorithms and apps."
license = "MIT"
readme = "README.md"
repository = "https://github.com/lenna-project/lenna-core"
homepage = "https://lenna.app/"
documentation = "https://docs.rs/lenna_core"
keywords = ["library", "image-processing"]
categories = ["multimedia::images", "wasm", "graphics"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
resize-plugin = []
python = ["ndarray", "nshare", "numpy", "pyo3", "pythonize"]
cpp = []

[dependencies]
base64 = "0.22"
dyn-clone = "1.0"
kamadak-exif = "0.6.1"
image = { version = "0.24.7", default-features = false, features = [
    "png",
    "jpeg",
] }
img-parts = "0.3.3"
paste = "1.0"
pyo3 = { version = "0.16", features = ["extension-module"], optional = true }
ndarray = { version = "0.15.6", optional = true }
nshare = { version = "0.9", features = ["image", "ndarray"], optional = true }
numpy = { version = "0.16", optional = true }
pythonize = { version = "0.16", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.34+deprecated"
libc = "0.2"

[dev-dependencies]
criterion = "0.3"

[build-dependencies]
rustc_version = "0.4"
cbindgen = "0.28"

[target.wasm32-unknown-unknown.dependencies]
console_error_panic_hook = "0.1.7"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }

[target.wasm32-unknown-unknown.dev-dependencies]
wasm-bindgen-test = "0.3"

[package.metadata.maturin]
classifiers = ["Programming Language :: Python"]
requires-dist = ["numpy"]

#exclude = [".github/*"]

[[bench]]
name = "lenna_benchmark"
harness = false
